ability system globals.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,8 @@
 ProjectID=70BA0A3B40E2B9899612678C078FC24A
 CopyrightNotice=Copyright Philosophical Games
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+AbilitySystemGlobalsClassName="/Script/Aura.ValueAbilitySystemGlobals"
+
+
+
